scenarios/uc18-metrics-and-logs/podinfo/kustomize/resources/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podinfo
spec:
  replicas: 4
  selector:
    matchLabels:
      app: podinfo
  template:
    metadata:
      labels:
        app: podinfo
    spec:
      containers:
        - name: podinfo
          image: image-registry.openshift-image-registry.svc:5000/podinfo/podinfo:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
