scenarios/uc18-metrics-and-logs/podinfo/kustomize/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: podinfo
  namespace: podinfo
  labels:
    app: podinfo
spec:
  selector:
    app: podinfo
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
