scenarios/uc18-metrics-and-logs/podinfo/kustomize/resources/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: podinfo
spec:
  to:
    kind: Service
    name: podinfo
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
